--- a/app/src/main/res/layout/dialog_client_options.xml
+++ b/app/src/main/res/layout/dialog_client_options.xml
@@ -34,23 +34,23 @@
                 android:layout_height="0.1dp"
                 android:background="@android:color/darker_gray" />
 
-            <TextView
-                android:id="@+id/add_new_sales"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
-                android:text="ADD NEW SALES"
-                android:textColor="@color/button_bg"
-                android:textSize="16sp"
-                android:textStyle="bold" />
+            <!--<TextView-->
+                <!--android:id="@+id/add_new_sales"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_gravity="center_horizontal"-->
+                <!--android:paddingTop="10dp"-->
+                <!--android:paddingBottom="10dp"-->
+                <!--android:text="ADD NEW SALES"-->
+                <!--android:textColor="@color/button_bg"-->
+                <!--android:textSize="16sp"-->
+                <!--android:textStyle="bold" />-->
 
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="0.1dp"
-                android:background="@android:color/darker_gray" />
+            <!--<View-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="0.1dp"-->
+                <!--android:background="@android:color/darker_gray" />-->
 
             <TextView
                 android:id="@+id/add_new_line"
@@ -65,22 +65,22 @@
                 android:textStyle="bold" />
 
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="0.1dp"
-                android:background="@android:color/darker_gray" />
+            <!--<View-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="0.1dp"-->
+                <!--android:background="@android:color/darker_gray" />-->
 
-            <TextView
-                android:id="@+id/add_new_goal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
-                android:text="ADD NEW GOAL"
-                android:textColor="@color/button_bg"
-                android:textSize="16sp"
-                android:textStyle="bold" />
+            <!--<TextView-->
+                <!--android:id="@+id/add_new_goal"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_gravity="center_horizontal"-->
+                <!--android:paddingTop="10dp"-->
+                <!--android:paddingBottom="10dp"-->
+                <!--android:text="ADD NEW GOAL"-->
+                <!--android:textColor="@color/button_bg"-->
+                <!--android:textSize="16sp"-->
+                <!--android:textStyle="bold" />-->
 
 
         </LinearLayout>
@@ -90,7 +90,7 @@
         android:id="@+id/cancel"
         android:layout_width="match_parent"
         android:layout_height="45dp"
-        android:layout_marginTop="6dp"
+        android:layout_marginTop="4dp"
         android:background="@drawable/curve_white_background_with_stroke"
         android:paddingBottom="12dp"
         android:paddingTop="12dp">
