--- a/app/src/main/res/layout/activity_client_lines_territories.xml
+++ b/app/src/main/res/layout/activity_client_lines_territories.xml
@@ -5,18 +5,66 @@
     android:background="@color/white"
     android:orientation="vertical">
 
+    <RelativeLayout
+        android:id="@+id/top_layout"
+        android:layout_width="match_parent"
+        android:layout_height="54dp"
+        android:background="@drawable/background">
+
+        <TextView
+            android:id="@+id/txt_client_info"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2dp"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:text="Lines/Territories"
+            android:layout_centerInParent="true"
+            android:textColor="@color/white"
+            android:textSize="18sp" />
+
+        <LinearLayout
+            android:id="@+id/back_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/img_close"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="10dp"
+                android:src="@mipmap/btn_back_arrow" />
+
+            <TextView
+                android:id="@+id/txt_back"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_toRightOf="@+id/img_close"
+                android:text="@string/str_back"
+                android:textColor="@color/white"
+                android:textSize="17sp" />
+        </LinearLayout>
+
+    </RelativeLayout>
+
     <LinearLayout
         android:id="@+id/tab_bar"
         android:layout_width="match_parent"
         android:layout_height="45dp"
-        android:layout_below="@+id/name"
-        android:paddingTop="5dp"
+        android:layout_below="@+id/top_layout"
+        android:paddingTop="1dp"
         android:background="#f3f5f6"
         android:orientation="horizontal"
         android:paddingBottom="1dp">
 
         <LinearLayout
-            android:id="@+id/you_tab"
+            android:id="@+id/lines_tab"
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -24,14 +72,14 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/txt_you"
+                android:id="@+id/txt_lines"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:text="YOU"
+                android:text="LINES"
                 android:textColor="@color/semi_transparent_black"
                 android:layout_marginBottom="10dp"
-                android:textSize="18sp"
+                android:textSize="15sp"
                 android:textStyle="bold" />
             <TextView
                 android:visibility="gone"
@@ -48,7 +96,7 @@
             android:background="@color/light_gray2" />
 
         <LinearLayout
-            android:id="@+id/emp_tab"
+            android:id="@+id/territories_tab"
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
             android:gravity="bottom"
@@ -56,14 +104,14 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/txt_emp"
+                android:id="@+id/txt_territories"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:text="EMPLOYEES"
+                android:text="TERRITORIES"
                 android:textColor="@color/semi_transparent_black"
                 android:layout_marginBottom="10dp"
-                android:textSize="18sp"
+                android:textSize="15sp"
                 android:textStyle="bold" />
 
             <TextView
