- cleaned up signup - the sliding notifications that show up at the top

--- a/app/src/main/res/layout/fragment_sign_up_email.xml
+++ b/app/src/main/res/layout/fragment_sign_up_email.xml
@@ -4,12 +4,12 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/background"
+    android:background="@drawable/background_layout"
     android:id="@+id/parent">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="54dp"
+        android:layout_height="@dimen/action_bar_height"
         android:id="@+id/top_layout">
 
         <TextView
@@ -17,27 +17,28 @@
             android:layout_height="wrap_content"
             android:text="@string/str_signup"
             android:id="@+id/txt_signup_label"
-            android:textColor="@color/white"
-            android:textSize="25dp"
+            style="@style/SignUpTitle"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="15dp"
+            android:layout_centerInParent="true"
             android:layout_centerHorizontal="true" />
 
         <ImageView
-            android:layout_width="25dp"
-            android:layout_height="25dp"
+            android:layout_width="@dimen/action_bar_icon_height"
+            android:layout_height="@dimen/action_bar_icon_height"
+            android:padding="@dimen/action_bar_icon_padding"
             android:id="@+id/img_close"
-            android:src="@mipmap/btn_close"
+            android:src="@drawable/btn_back_arrow"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="15dp" />
+            android:layout_marginLeft="5dp" />
 
         <ImageView
-            android:layout_width="35dp"
-            android:layout_height="35dp"
+                android:layout_width="@dimen/action_bar_icon_height"
+                android:layout_height="@dimen/action_bar_height"
+                android:padding="@dimen/action_bar_icon_padding"
             android:id="@+id/img_help"
-            android:src="@mipmap/btn_help"
+            android:src="@drawable/btn_help"
             android:onClick="helpButtonClicked"
-            android:layout_marginRight="15dp"
+            android:layout_marginRight="5dp"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true" />
 
@@ -60,7 +61,7 @@
                 android:id="@+id/txt_hint_string"
                 android:gravity="center_horizontal"
                 android:textColor="@color/white"
-                android:textSize="20sp"
+                android:textSize="16sp"
                 android:layout_marginTop="40dp"
                 android:layout_marginBottom="40dp"
                 android:layout_marginLeft="15dp"
@@ -130,14 +131,14 @@
                         android:layout_width="50dp"
                         android:layout_height="50dp"
                         android:id="@+id/img_facebook"
-                        android:src="@mipmap/facebook1"
+                        android:src="@drawable/facebook1"
                         android:layout_marginLeft="12dp" />
 
                     <ImageView
                         android:layout_width="50dp"
                         android:layout_height="50dp"
                         android:id="@+id/img_twitter"
-                        android:src="@mipmap/twitter1"
+                        android:src="@drawable/twitter1"
                         android:layout_marginLeft="12dp" />
 
                 </LinearLayout>
@@ -164,7 +165,7 @@
             android:clickable="false"
             android:focusable="false"
             android:id="@+id/img_next_arrow"
-            android:src="@mipmap/btn_next_arrow"
+            android:src="@drawable/btn_next_arrow"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="10dp" />
@@ -183,29 +184,6 @@
             android:layout_marginRight="15dp" />
     </RelativeLayout>
 
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="fill_parent"
-        android:layout_height="54dp"
-        android:background="@color/alert_bg_color"
-        android:gravity="center_vertical|center_horizontal"
-        android:id="@+id/alert_valid"
-        android:visibility="visible">
-
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:id="@+id/imageView2"
-            android:src="@mipmap/attention" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/txt_alert"
-            android:textColor="@color/white"
-            android:textSize="17dp"
-            android:layout_marginLeft="25dp" />
-    </LinearLayout>
 
 </RelativeLayout>
 
