--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,7 +22,7 @@
     <color name="off_white">#FAFAFA</color>
     <color name="background2">#E0E0E0</color>
     <color name="indigo">#3F51B5</color>
-    <color name="blue">#ffffff</color>
+    <color name="blue">#3C96FF</color>
     <color name="grey">#32323A</color>
     <color name="light_gray">#DAE1E4</color>
     <color name="light_gray2">#BBBBBB</color>
