--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -4,32 +4,41 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/background">
+                android:id="@+id/parent_view"
+    android:background="@drawable/background">
 
     <RelativeLayout
         android:id="@+id/top_layout"
         android:layout_width="match_parent"
-        android:layout_height="54dp">
+        android:gravity="center_vertical"
+        android:layout_height="@dimen/action_bar_height">
+
+        <ImageView android:layout_width="40dp"
+                   android:layout_height="40dp"
+                   android:padding="10dp"
+                   android:onClick="goBack"
+                   android:layout_centerVertical="true"
+        android:src="@drawable/btn_back_arrow"/>
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:text="@string/str_signin"
             android:id="@+id/txt_signin"
             android:textColor="@color/white"
-            android:textSize="25sp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="15dp"
+            android:textSize="20sp"
+            android:gravity="center_vertical"
+            android:layout_centerVertical="true"
             android:layout_centerHorizontal="true" />
     </RelativeLayout>
 
     <ImageView
-        android:layout_width="120dp"
+        android:layout_width="100dp"
         android:layout_height="50dp"
         android:id="@+id/img_logo"
-        android:src="@mipmap/logo"
+        android:src="@drawable/logo"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="30dp"
         android:layout_below="@+id/top_layout"
         android:layout_centerHorizontal="true" />
 
@@ -45,18 +54,19 @@
             android:id="@+id/email"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="20dp"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
-            android:layout_marginBottom="10dp"
-            android:ems="10"
+            android:layout_marginBottom="20dp"
+            android:ems="12"
+            android:gravity="left|center_vertical"
             android:hint="@string/str_hint_email"
             android:textColor="@android:color/black"
             android:backgroundTint="@android:color/transparent"
             android:textColorHint="@android:color/darker_gray"
             android:inputType="textEmailAddress" />
 
-        <TextView
+        <View
             android:id="@+id/line"
             android:layout_width="fill_parent"
             android:layout_height="0.1dp"
@@ -71,10 +81,10 @@
                 android:id="@+id/password"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
-                android:layout_marginBottom="10dp"
+                android:layout_marginBottom="20dp"
                 android:ems="10"
                 android:hint="@string/str_hint_password"
                 android:inputType="textPassword"
@@ -105,19 +115,32 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:id="@+id/signin"
-            android:src="@mipmap/btn_signin"
-            android:layout_marginTop="25dp"
+            android:src="@drawable/btn_signin"
+            android:layout_marginTop="35dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp" />
 
-        <ImageView
-            android:layout_width="150dp"
-            android:layout_height="25dp"
-            android:id="@+id/signup"
-            android:src="@mipmap/btn_signup"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="25dp" />
+
+        <LinearLayout android:layout_width="match_parent"
+                      android:gravity="center"
+                      android:id="@+id/signup"
+                      android:layout_margin="25dp"
+                      android:layout_height="wrap_content">
+            <TextView android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:textColor="@color/grey"
+                      android:textSize="16sp"
+                      android:text="New to Tied?"/>
+            <TextView android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:textColor="@color/blue"
+                      android:layout_marginLeft="5dp"
+                      android:textStyle="bold"
+                      android:textSize="16sp"
+                      android:text="Sign Up"/>
+
+        </LinearLayout>
 
         <LinearLayout
             android:orientation="horizontal"
@@ -139,40 +162,19 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:id="@+id/img_twitter"
-                android:src="@mipmap/twitter"
+                android:src="@drawable/twitter"
                 android:layout_marginLeft="12dp" />
 
             <ImageView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:id="@+id/img_facebook"
-                android:src="@mipmap/facebook"
+                android:src="@drawable/facebook"
                 android:layout_marginLeft="12dp"
                 android:onClick="onFacebookClick"/>
         </LinearLayout>
 
     </LinearLayout>
 
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="fill_parent"
-        android:layout_height="54dp"
-        android:background="@color/alert_bg_color"
-        android:gravity="center_vertical|center_horizontal"
-        android:id="@+id/alert_valid">
 
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:id="@+id/imageView2"
-            android:src="@mipmap/attention" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/txt_alert"
-            android:textColor="@color/white"
-            android:textSize="17sp"
-            android:layout_marginLeft="25dp" />
-    </LinearLayout>
 </RelativeLayout>
