--- a/app/src/main/res/layout/fragment_sign_up_password.xml
+++ b/app/src/main/res/layout/fragment_sign_up_password.xml
@@ -3,60 +3,43 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/background"
+                android:background="@drawable/background_layout"
     android:orientation="vertical">
 
     <RelativeLayout
         android:id="@+id/top_layout"
         android:layout_width="match_parent"
-        android:layout_height="54dp">
+        android:layout_height="@dimen/action_bar_height">
 
         <TextView
-            android:id="@+id/txt_signup_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="15dp"
-            android:text="@string/str_signup"
-            android:textColor="@color/white"
-            android:textSize="25dp" />
-
-        <LinearLayout
-            android:id="@+id/back_layout"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/img_close"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="10dp"
-                android:src="@mipmap/btn_back_arrow" />
-
-            <TextView
-                android:id="@+id/txt_back"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_toRightOf="@+id/img_close"
-                android:text="@string/str_back"
-                android:textColor="@color/white"
-                android:textSize="20dp" />
-        </LinearLayout>
+                android:text="@string/str_signup"
+                android:id="@+id/txt_signup_label"
+                style="@style/SignUpTitle"
+                android:layout_gravity="center_horizontal"
+                android:layout_centerInParent="true"
+                android:layout_centerHorizontal="true" />
 
         <ImageView
-            android:id="@+id/img_help"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:onClick="helpButtonClicked"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="15dp"
-            android:src="@mipmap/btn_help" />
+                android:layout_width="@dimen/action_bar_icon_height"
+                android:layout_height="@dimen/action_bar_icon_height"
+                android:padding="@dimen/action_bar_icon_padding"
+                android:id="@+id/img_close"
+                android:src="@drawable/btn_back_arrow"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="5dp" />
+
+        <ImageView
+                android:layout_width="@dimen/action_bar_icon_height"
+                android:layout_height="@dimen/action_bar_height"
+                android:padding="@dimen/action_bar_icon_padding"
+                android:id="@+id/img_help"
+                android:src="@drawable/btn_help"
+                android:onClick="helpButtonClicked"
+                android:layout_marginRight="5dp"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true" />
 
     </RelativeLayout>
 
@@ -82,7 +65,7 @@
                 android:gravity="center_horizontal"
                 android:text="@string/str_signup_hint2"
                 android:textColor="@color/white"
-                android:textSize="20sp" />
+                android:textSize="16sp" />
 
             <LinearLayout
                 android:id="@+id/address_layout"
@@ -151,7 +134,7 @@
             android:layout_marginRight="10dp"
             android:clickable="false"
             android:focusable="false"
-            android:src="@mipmap/btn_next_arrow" />
+            android:src="@drawable/btn_next_arrow" />
 
         <TextView
             android:id="@+id/txt_continue_label"
@@ -167,28 +150,6 @@
             android:textSize="15dp" />
     </RelativeLayout>
 
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="fill_parent"
-        android:layout_height="54dp"
-        android:background="@color/alert_bg_color"
-        android:gravity="center_vertical|center_horizontal"
-        android:id="@+id/alert_valid"
-        android:visibility="visible">
 
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:id="@+id/imageView2"
-            android:src="@mipmap/attention" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/txt_alert"
-            android:textColor="@color/white"
-            android:textSize="17dp"
-            android:layout_marginLeft="25dp" />
-    </LinearLayout>
 
 </RelativeLayout>
