--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -75,6 +75,11 @@
         <item name="android:layout_marginBottom">10dp</item>
         <item name="android:textColor">@color/grey</item>
     </style>
+    <style name="SignUpTitle" parent="RobotoTextViewStyle">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
     <style name="FieldLabels" parent="RobotoTextViewStyle">
         <item name="android:textSize">11sp</item>
         <item name="android:textStyle">normal</item>
