--- a/app/src/main/res/layout/activity_map_client_list_layout.xml
+++ b/app/src/main/res/layout/activity_map_client_list_layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:background="@color/white"
@@ -28,7 +28,7 @@
                       android:layout_marginLeft="10dp"
                       android:layout_marginBottom="8dp"
                       android:layout_height="50dp"
-           android:src="@drawable/ic_map_active"/>
+           android:src="@drawable/ic_map_inactive"/>
             <ImageView android:layout_width="60dp"
                        android:scaleType="centerCrop"
                        android:layout_alignParentBottom="true"
@@ -36,7 +36,7 @@
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="8dp"
                        android:layout_height="50dp"
-                       android:src="@drawable/ic_list_inactive"/>
+                       android:src="@drawable/ic_list_active"/>
                       
         </RelativeLayout>
 
@@ -65,15 +65,11 @@
                       android:id="@+id/search_but"
                       android:layout_centerVertical="true"
                       android:layout_toLeftOf="@+id/filter"
-                      android:layout_marginRight="20dp"
-        >
+                      android:layout_marginRight="20dp">
             <ImageView
 
                     android:layout_width="24dp"
                     android:layout_height="24dp"
-
-
-
                     android:src="@drawable/ic_search" />
 
         </LinearLayout>
@@ -82,19 +78,20 @@
                       android:id="@+id/filter"
                       android:layout_marginRight="10dp"
                       android:layout_alignParentRight="true"
-                      android:layout_centerVertical="true"
-        >
+                      android:layout_centerVertical="true">
         <ImageView
-
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:src="@drawable/ic_filter_map" />
         </LinearLayout>
 
     </RelativeLayout>
-    <FrameLayout
-               android:id="@+id/fragment_container"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"/>
 
-</LinearLayout>
+    <ListView
+        android:id="@+id/list"
+        android:layout_below="@+id/top_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:listSelector="@android:color/transparent"
+        android:scrollbars="none" />
+</RelativeLayout>
