--- a/app/src/main/res/layout/activity_client_layout.xml
+++ b/app/src/main/res/layout/activity_client_layout.xml
@@ -1,90 +1,100 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:background="@color/white"
-              android:layout_height="match_parent">
-    <RelativeLayout
-            android:id="@+id/top_layout"
-            android:layout_width="match_parent"
-            android:background="@drawable/background"
-            android:layout_height="54dp">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/white"
+    android:orientation="vertical">
 
-        <RelativeLayout android:layout_width="140dp"
-                      android:layout_height="60dp"
-                      android:padding="0dp"
-                      android:layout_margin="30dp"
-                      android:layout_centerInParent="true"
-                     >
-            <ImageView android:layout_width="match_parent"
-                       android:scaleType="centerCrop"
-                       android:layout_centerVertical="true"
-                       android:src="@drawable/ic_map_tab_background"
-                       android:layout_height="50dp"/>
-           <ImageView android:layout_width="60dp"
-                      android:scaleType="centerCrop"
-                      android:layout_alignParentLeft="true"
-                      android:layout_alignParentBottom="true"
-                      android:layout_marginLeft="10dp"
-                      android:layout_marginBottom="8dp"
-                      android:layout_height="50dp"
-           android:src="@drawable/ic_map_active"/>
-            <ImageView android:layout_width="60dp"
-                       android:scaleType="centerCrop"
-                       android:layout_alignParentBottom="true"
-                       android:layout_alignParentRight="true"
-                       android:layout_marginRight="10dp"
-                       android:layout_marginBottom="8dp"
-                       android:layout_height="50dp"
-                       android:src="@drawable/ic_list_inactive"/>
-                      
+    <RelativeLayout
+        android:id="@+id/top_layout"
+        android:layout_width="match_parent"
+        android:layout_height="54dp"
+        android:background="@drawable/background">
+
+        <RelativeLayout
+            android:layout_width="140dp"
+            android:layout_height="60dp"
+            android:layout_centerInParent="true"
+            android:layout_margin="30dp"
+            android:padding="0dp">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_centerVertical="true"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_map_tab_background" />
+
+            <ImageView
+                android:layout_width="60dp"
+                android:layout_height="50dp"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentLeft="true"
+                android:layout_marginBottom="8dp"
+                android:layout_marginLeft="10dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_map_active" />
+
+            <ImageView
+                android:layout_width="60dp"
+                android:layout_height="50dp"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginBottom="8dp"
+                android:layout_marginRight="10dp"
+                android:id="@+id/img_list_clients"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_list_inactive" />
+
         </RelativeLayout>
 
         <LinearLayout
-                android:id="@+id/back_layout"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:layout_centerVertical="true"
-                android:padding="10dp"
-                android:onClick="goBack"
-                android:orientation="horizontal">
+            android:id="@+id/back_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:gravity="center"
+            android:onClick="goBack"
+            android:orientation="horizontal"
+            android:padding="10dp">
 
             <ImageView
-                    android:id="@+id/img_close"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="0dp"
-                    android:src="@drawable/btn_close" />
+                android:id="@+id/img_close"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_gravity="center"
+                android:layout_marginLeft="0dp"
+                android:src="@drawable/btn_close" />
 
         </LinearLayout>
 
-        <LinearLayout android:layout_width="wrap_content"
-                      android:layout_height="wrap_content"
-                      android:id="@+id/search_but"
-                      android:layout_centerVertical="true"
-                      android:layout_toLeftOf="@+id/filter"
-                      android:layout_marginRight="20dp"
-        >
+        <LinearLayout
+            android:id="@+id/search_but"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="20dp"
+            android:layout_toLeftOf="@+id/filter">
+
             <ImageView
 
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
 
 
-
-                    android:src="@drawable/ic_search" />
+                android:src="@drawable/ic_search" />
 
         </LinearLayout>
-        <LinearLayout android:layout_width="wrap_content"
-                      android:layout_height="wrap_content"
-                      android:id="@+id/filter"
-                      android:layout_marginRight="10dp"
-                      android:layout_alignParentRight="true"
-                      android:layout_centerVertical="true"
-        >
-        <ImageView
+
+        <LinearLayout
+            android:id="@+id/filter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="10dp">
+
+            <ImageView
 
                 android:layout_width="24dp"
                 android:layout_height="24dp"
@@ -92,9 +102,10 @@
         </LinearLayout>
 
     </RelativeLayout>
+
     <FrameLayout
-               android:id="@+id/fragment_container"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"/>
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </LinearLayout>
